# Silver-Bullet

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  CURRENT.md  Dockerfile  README.MD  TASK.md  THOUGHTS.md  ToDo.md  chain_v58.py  docker-compose.yml  example.py  feature_registry.py  generate_data.py  import_reports_to_mlflow.py  main.py  model.py  predict.py  pyproject.toml  requirements.txt  test.py  train.py
Postprocess/: __addpad.py  postprocess.py
Splitter/: sentence_splitter.py
ablation_reports/: ablation_cluster_report.json  framework.md
analysis_reports/: feature_analysis_report.json  feature_analysis_report.md  run_analysis.py
api/: dependencies.py  main.py  schemas.py
backend/: ablation_cluster.py  augment_data.py  benchmark.py  benchmark_eval.py  cache_db.py  chain_train.py  example.py  feature_cache.py  feature_registry.py  fetch_external_data.py  generate_data.py  kfold_train.py  model.py  model_hub.py  precompute_features.py  predict.py  prefill_svo.py  shap_analysis.py  test.py  train.py  training_report.py
benchmark_reports/: 2026-05-08.json  benchmark_context-vs-generated_20260331_225410.json  benchmark_context-vs-generated_20260331_225410.md  benchmark_model-vs-model_20260331_225525.json  benchmark_model-vs-model_20260331_225525.md  benchmark_reference-vs-generated_20260331_225450.json  benchmark_reference-vs-generated_20260331_225450.md
data/: test.json  train.json  validate.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+110 files in other folders)
