[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "silver-bullet"
version = "1.0.0"
description = "Real-time LLM evaluation benchmark — faithfulness and agreement scoring via multi-signal CNN"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch==2.8.0",
    "transformers==4.51.0",
    "sentence-transformers==5.1.0",
    "huggingface-hub==0.34.4",
    "scikit-learn==1.7.1",
    "numpy==2.3.2",
    "tqdm==4.67.1",
    "sentencepiece==0.2.1",
    # Feature extractors
    "gliner==0.2.22",
    # Config
    "PyYAML==6.0.2",
    # External APIs
    "openai==1.107.2",
    # API server
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "pydantic==2.11.9",
    "slowapi==0.1.9",
    "limits==5.8.0",
    "starlette==0.52.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = [
    ".sbvenv*",
    "cache*",
    "training_reports*",
    "test_reports*",
    "research_paper*",
]

[project.scripts]
sb-serve = "backend.api.main:app"
sb-train = "backend.train:main"
